--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,7 @@
     <title>PicowStore</title>
     <link rel="stylesheet" href="../css/style-home.css">
     <link rel="icon" type="image/x-icon" href="../image/logo/sapi.ico">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav>
@@ -16,7 +17,12 @@
             <li><a href="nav-pria.html">Pria</a></li>
             <li><a href="nav-anak.html">Anak-anak</a></li>
             <li><a href="nav-couple.html">Couple</a></li>
-            <li><a href="../index.html">Logout</a></li>
+            <li class="dropdown2">
+                <a href="#">Tentang</a>
+                <div  class="dropdown-content2">
+                        <a href="tentang.html">Tentang</a>
+                        <a href="../index.html">Log Out</a>
+                </div>
         </ul>
         </div>
     </nav>
@@ -74,10 +80,17 @@
     <nav class="navbar">
         <div class="navbar-bottom">
             <div class="kontak">
-            <br><strong>PicowStore </strong><br>
+            <strong>PicowStore </strong><br>
             <br>Jl. Maju No.1, Jepun
             <br>WA Admin 088888888222
         </div>
+
+        <div class="sosial-media">
+            <a href="#" target=“_blank”><i class='bx bxl-whatsapp bx-tada' ></i></a>
+            <a href="#" target=“_blank”><i class='bx bxl-facebook-circle bx-tada' ></i></a>
+            <a href="#" target=“_blank”><i class='bx bxl-instagram bx-tada' ></i></a>
+        </div>
+
         <div class="container2">
             <ul class="navigation2">
                 <a href="nav-wanita.html"><li>Wanita</li></a>
@@ -87,5 +100,10 @@
             </ul>
         </div>
     </nav>
+
+    <button id="tombol" class="tombol"><i class='bx bxs-to-top bx-tada' ></i></button>
+
+    <script src="../javascript/home.js"></script>
+
 </body>
 </html>
