--- a/html/tentang.html
+++ b/html/tentang.html
@@ -27,15 +27,16 @@
         </div>
     </nav>
     <div class="content">
-        <div class="tumbnail">
-            <img src="../image/anak.webp" alt="wayang">
-            <p><br><a class="text">Kemeja Anak</a></p><br>
-            <a class="text">Rp. 120.000,-</a>
+        <div>
+        <ul class="kontak2">
+            <li><a href="https://wa.me/6281328747579" target=“_blank”>WhatsApp</a></li>
+            <li><a href="https://web.facebook.com/muhammad.asyqor/" target=“_blank”>Facebook</a></li>
+            <li><a href="https://www.instagram.com/abiyyulasyqor/" target=“_blank”>Instagram</a></li>
+            <li><a href="https://youtube.com/channel/UCfDJFlF7EPLNITttdEuz_tw" target=“_blank”>Youtube</a></li>
+        </ul>
         </div>
-        <div class="narasi">
-            <img src="../image/anak2.jpg" alt="">
-            <p><br><a class="text">Kaos Anak</a></p><br>
-            <a class="text">Rp. 80.000,-</a>
+        <div class="maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.4864509238596!2d109.64592337424364!3d-6.951801568057331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7021691999d36d%3A0xf44504df46c85f67!2sGg.%202%2C%20Ambokembang%2C%20Kec.%20Kedungwuni%2C%20Kabupaten%20Pekalongan%2C%20Jawa%20Tengah%2051173!5e0!3m2!1sid!2sid!4v1697376469380!5m2!1sid!2sid" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
@@ -52,7 +53,7 @@
             <a href="#" target=“_blank”><i class='bx bxl-facebook-circle bx-tada' ></i></a>
             <a href="#" target=“_blank”><i class='bx bxl-instagram bx-tada' ></i></a>
         </div>
-
+        
         <div class="container2">
             <ul class="navigation2">
                 <a href="nav-wanita.html"><li>Wanita</li></a>
