--- a/html/register.html
+++ b/html/register.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PicowStore | Register Page</title>
     <link rel="stylesheet" href="../css/style-register.css">
+    <link rel="icon" type="image/x-icon" href="../image/logo/sapi.ico">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="wrapper">
@@ -23,7 +25,14 @@
                 <input type="email" placeholder="Email" required>
             </div>
             <div class="input-box" id="phone">
-                <input type="text" placeholder="Phone Number" required>
+                <input oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                type = "number"
+                placeholder="Phone Number"
+                maxlength = "13" required>
+            </div>
+            <div class="input-box" >
+                <input type="text" id="rupiah" placeholder="Salary" required>
+                <script src="../javascript/script-register.js"></script>
             </div>
             <div class="input-box">
                 <p>Religion
@@ -50,6 +59,11 @@
                 <p>Have an account?<a href="../index.html"> Login</a></p>
             </div>
         </form>
-    </div>    
+    </div>
+    
+    <button id="tombol" class="tombol"><i class='bx bxs-to-top bx-tada' ></i></button>
+
+    <script src="../javascript/home.js"></script>
+
 </body>
 </html>
