--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>PicowStore | Login Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="image/logo/sapi.ico">
 </head>
 <body>
     <div class="wrapper">
