--- a/html/kontakkami.html
+++ b/html/kontakkami.html
@@ -66,21 +66,33 @@
     </div>
 
     <div class="container-fluid p-4 my-5">
-        <div class="card p-4 shadow text-center">
-            <h1 class="my-4">Pakaian Anak</h1>
+        <div class="container-fluid card p-4 shadow text-center py-5">
+            <h1 class="mb-5">Kontak Kami</h1>
             <div class="row">
-                <div class="col-md-6 col-xl-6">
-                    <a href="../image/anak.jpg" target="_blank"><img src="../image/anak.jpg" alt="" width="300"></a>
-                    <p>Kemeja Anak<br>Rp. 120.000,-</p>
+                <div class="col-12 col-md-6">
+                    <ul class="navbar-nav d-block m-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://wa.me/6282313913226" target=“_blank”>WhatsApp</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://web.facebook.com/zulfiah.syarifah/"
+                                target=“_blank”>Facebook</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.instagram.com/zulfiahasy/"
+                                target=“_blank”>Instagram</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-6 col-md col-xl-6">
-                    <a href="../image/anak2.jpg" target="_blank"><img src="../image/anak2.jpg" alt="" width="300"></a>
-                    <p>Kaos Anak<br>Rp. 80.000,-</p>
+                <div class="col-12 col-md-6">
+                    <iframe class="d-block m-auto"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.4864509238596!2d109.64592337424364!3d-6.951801568057331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7021691999d36d%3A0xf44504df46c85f67!2sGg.%202%2C%20Ambokembang%2C%20Kec.%20Kedungwuni%2C%20Kabupaten%20Pekalongan%2C%20Jawa%20Tengah%2051173!5e0!3m2!1sid!2sid!4v1697376469380!5m2!1sid!2sid"
+                        width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="container-fluid text-center py-3 bg-light">
         <div class="row">
             <div class="col-12 col-sm-6">
